--- a/src/app/dialog-task-details/dialog-task-details.component.html
+++ b/src/app/dialog-task-details/dialog-task-details.component.html
@@ -73,7 +73,7 @@
     </div>
 
     <div class="button-box">
-        <div (click)="archivedTask(taskData.id)">
+        <div (click)="openDialogArchivedTask(taskData.id)">
             <mat-icon>delete</mat-icon>
         </div>
 
