add contact, get contacts from fb

--- a/src/app/dialog-request/dialog-request.component.html
+++ b/src/app/dialog-request/dialog-request.component.html
@@ -15,3 +15,12 @@
         <div (click)="archivedTask()">Archived task</div>
     </div>
 </div>
+
+<div *ngIf="addContact" class="request-box">
+    <h1>Contact created!</h1>
+
+    <div class="btn-box">
+        <div routerLink="/contact" (click)="dialog.closeAll()">Open Contact List</div>
+        <div (click)="dialogRef.close()">Add new contact</div>
+    </div>
+</div>
