--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -34,7 +34,8 @@
                 <mat-icon>note_add</mat-icon>
             </button>
 
-            <button mat-icon-button matTooltip="Add Contact" matTooltipPosition="right" matTooltipClass="tooltip-blue">
+            <button mat-icon-button matTooltip="Add Contact" matTooltipPosition="right" matTooltipClass="tooltip-blue"
+                (click)="openDialogAddContact()">
                 <mat-icon>person_add</mat-icon>
             </button>
 
