--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -2,7 +2,15 @@
     <div class="card-header">
         <div>
             <h1>Contact</h1>
-            <h3>Contact List</h3>
+            <h3>Better with a team</h3>
         </div>
+    </div>
+
+    <div class="card-body">
+        <mat-card *ngFor="let contact of allContacts">
+            <p>{{ contact.firstName }} {{ contact.lastName }}</p>
+            <p>{{ contact.email }}</p>
+            <p>{{ contact.phone }}</p>
+        </mat-card>
     </div>
 </mat-card>
