--- a/src/app/dialog-request/dialog-request.component.html
+++ b/src/app/dialog-request/dialog-request.component.html
@@ -20,7 +20,7 @@
     <h1>Contact created!</h1>
 
     <div class="btn-box">
-        <div routerLink="/contact" (click)="dialog.closeAll()">Open Contact List</div>
+        <div routerLink="/contact" (click)="dialog.closeAll()">Open List</div>
         <div (click)="dialogRef.close()">Add new contact</div>
     </div>
 </div>
