--- a/src/app/dialog-add-task/dialog-add-task.component.html
+++ b/src/app/dialog-add-task/dialog-add-task.component.html
@@ -59,7 +59,7 @@
             <div class="input-box">
                 <select class="description-option input-shadow" [(ngModel)]="task.assignedTo">
                     <option value="" disabled selected>Assigned to...</option>
-                    <option value="person">Person</option>
+                    <option value="{{ contact.firstName }} {{ contact.lastName }}" *ngFor="let contact of allContacts">{{ contact.firstName }} {{ contact.lastName }}</option>
                 </select>
             </div>
 
