--- a/src/app/dialog-task-details/dialog-task-details.component.html
+++ b/src/app/dialog-task-details/dialog-task-details.component.html
@@ -58,7 +58,7 @@
             <div class="input-box">
                 <select class="description-option input-shadow" [(ngModel)]="taskData.assignedTo">
                     <option value="" disabled selected>Assigned to...</option>
-                    <option value="person">Person</option>
+                    <option value="{{ contact.firstName }} {{ contact.lastName }}" *ngFor="let contact of allContacts">{{ contact.firstName }} {{ contact.lastName }}</option>
                 </select>
             </div>
 
