--- a/src/app/board/board.component.html
+++ b/src/app/board/board.component.html
@@ -49,7 +49,7 @@
                             </span>
                             <h4 class="task-name">{{ task.title }}</h4>
                             <div>
-                                <span class="task-assigned">
+                                <span class="task-assigned" [ngStyle]="{'background': task.bgColor}">
                                     {{ task.assignedTo.split(" ")[0][0] }}{{task.assignedTo.split(" ")[1][0] }}</span>
                                 <mat-icon style="color: #7AE229"
                                     *ngIf="task.priority==='low'">keyboard_double_arrow_down</mat-icon>
@@ -102,7 +102,7 @@
                             </span>
                             <h4 class="task-name">{{ task.title }}</h4>
                             <div>
-                                <span class="task-assigned">
+                                <span class="task-assigned" [ngStyle]="{'background': task.bgColor}">
                                     {{ task.assignedTo.split(" ")[0][0] }}{{task.assignedTo.split(" ")[1][0] }}</span>
                                 <mat-icon style="color: #7AE229"
                                     *ngIf="task.priority==='low'">keyboard_double_arrow_down</mat-icon>
@@ -155,7 +155,7 @@
                             </span>
                             <h4 class="task-name">{{ task.title }}</h4>
                             <div>
-                                <span class="task-assigned">
+                                <span class="task-assigned" [ngStyle]="{'background': task.bgColor}">
                                     {{ task.assignedTo.split(" ")[0][0] }}{{task.assignedTo.split(" ")[1][0] }}</span>
                                 <mat-icon style="color: #7AE229"
                                     *ngIf="task.priority==='low'">keyboard_double_arrow_down</mat-icon>
@@ -208,7 +208,7 @@
                             </span>
                             <h4 class="task-name">{{ task.title }}</h4>
                             <div>
-                                <span class="task-assigned">
+                                <span class="task-assigned" [ngStyle]="{'background': task.bgColor}">
                                     {{ task.assignedTo.split(" ")[0][0] }}{{task.assignedTo.split(" ")[1][0] }}</span>
                                 <mat-icon style="color: #7AE229"
                                     *ngIf="task.priority==='low'">keyboard_double_arrow_down</mat-icon>
