--- a/src/app/dialog-add-task/dialog-add-task.component.html
+++ b/src/app/dialog-add-task/dialog-add-task.component.html
@@ -57,9 +57,12 @@
             </div>
 
             <div class="input-box">
-                <select class="description-option input-shadow" [(ngModel)]="task.assignedTo">
-                    <option value="" disabled selected>Assigned to...</option>
-                    <option value="{{ contact.firstName }} {{ contact.lastName }}" *ngFor="let contact of allContacts">{{ contact.firstName }} {{ contact.lastName }}</option>
+                <select class="description-option input-shadow" [(ngModel)]="selectedContact" (change)="getSelectedContact(selectedContact)">
+                    <option [ngValue]="undefined" [disabled]="true">Assigned to...</option>
+                    <option [ngValue]="contact" *ngFor="let contact of allContacts">
+                        {{ contact.firstName }} {{ contact.lastName }}</option>
+                    <!-- <option value="{{ contact.firstName }} {{ contact.lastName }} and {{ contact.bgColor }}" *ngFor="let contact of allContacts">
+                        {{ contact.firstName }} {{ contact.lastName }}</option> -->
                 </select>
             </div>
 
