--- a/src/app/dialog-task-details/dialog-task-details.component.html
+++ b/src/app/dialog-task-details/dialog-task-details.component.html
@@ -35,7 +35,8 @@
             <mat-form-field class="input-shadow input-box height-36">
                 <mat-label for="dueDate">Due Date</mat-label>
                 <input matInput [value]="taskData.dueDate | date:'M/d/yyyy'" *ngIf="!dateChange">
-                <input [min]="minDate" matInput [matDatepicker]="picker" [(ngModel)]="taskData.dueDate" (dateChange)="dateChange = true">
+                <input [min]="minDate" matInput [matDatepicker]="picker" [(ngModel)]="taskData.dueDate"
+                    (dateChange)="dateChange = true">
                 <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
                 <mat-datepicker #picker></mat-datepicker>
             </mat-form-field>
@@ -44,7 +45,8 @@
                 <mat-form-field class="input-shadow input-box hover-prio">
                     <mat-label>Priority</mat-label>
                     <input [(ngModel)]="taskData.priority" matInput class="d-none">
-                    <mat-radio-group class="example-radio-group" [(ngModel)]="taskData.priority">
+                    <mat-radio-group class="example-radio-group" [(ngModel)]="taskData.priority"
+                        (change)="selectOptions()">
                         <div *ngFor="let button of priorityBtn" class="btn-shadow">
                             <mat-radio-button class="example-radio-button" value="{{ button.name }}">
                                 {{ button.name[0].toUpperCase() }}{{ button.name.slice(1).toLowerCase() }}
@@ -55,10 +57,13 @@
                 </mat-form-field>
             </div>
 
-            <div class="input-box">
-                <select class="description-option input-shadow" [(ngModel)]="taskData.assignedTo">
-                    <option value="" disabled selected>Assigned to...</option>
-                    <option value="{{ contact.firstName }} {{ contact.lastName }}" *ngFor="let contact of allContacts">{{ contact.firstName }} {{ contact.lastName }}</option>
+            <div class="input-box pos-rel">
+                <input readonly *ngIf="!hideHolder" class="input-holder" matInput [(ngModel)]="contactName">
+                <select class="description-option input-shadow" [(ngModel)]="contactName"
+                    (change)="getSelectedContact()">
+                    <option [ngValue]="undefined" [disabled]="true">Assigned to...</option>
+                    <option [ngValue]="contact" *ngFor="let contact of allContacts">
+                        {{ contact.firstName }} {{ contact.lastName }}</option>
                 </select>
             </div>
 
@@ -73,7 +78,8 @@
     </div>
 
     <div class="button-box">
-        <div (click)="openDialogArchivedTask(taskData.id)" matTooltip="Delete task" matTooltipPosition="below" matTooltipClass="tooltip-blue">
+        <div (click)="openDialogArchivedTask(taskData.id)" matTooltip="Delete task" matTooltipPosition="below"
+            matTooltipClass="tooltip-blue">
             <mat-icon>delete</mat-icon>
         </div>
 
