sort tasks by date

--- a/src/app/summary/summary.component.html
+++ b/src/app/summary/summary.component.html
@@ -26,7 +26,7 @@
             </div>
 
             <div class="deadline-card">
-                <mat-card>
+                <mat-card routerLink="/board">
                     <div class="urgent-icon">
                         <div>
                             <mat-icon>keyboard_double_arrow_up</mat-icon>
