--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -1,7 +1,24 @@
+$fontSize: 16px;
+$textColor: #6C7587;
+
+$height: 54px;
+
+$bgColor: #EBECF0;
+$iconColor: #8992A5;
+
+$darkShadow: #484f60;
+$lightShadow: #FFFFFF;
+
+$dropShadow: 8px 8px 12px -2px rgba($darkShadow, 0.4),
+    -6px -6px 12px -1px rgba($lightShadow, 1);
+
+$innerShadow: inset -4px -4px 6px -1px rgba($lightShadow, 1),
+    inset 2px 2px 8px -1px rgba($darkShadow, 0.5);
+
 .card-header {
     display: flex;
-    flex-direction: column;
-    align-items: flex-start;
+    justify-content: space-between;
+    width: 100%;
     margin-top: 36px !important;
 
     h1 {
@@ -114,4 +131,76 @@
         margin-top: -5px;
         margin-left: 8px;
     }
+}
+
+@mixin applyFontStyle() {
+    font-size: $fontSize;
+    line-height: $fontSize;
+    color: $textColor;
+}
+
+%shared-styles {
+    @include applyFontStyle;
+    padding: 0 8px;
+    position: relative;
+    border: 2px solid rgba($lightShadow, 0);
+    outline: none;
+    text-align: start;
+    background-color: var(--bg-light);
+    transition: all 250ms ease-in-out;
+
+    &:hover {
+        box-shadow: none;
+        border-color: rgba($lightShadow, 0.5);
+    }
+}
+
+.search-input {
+    @extend %shared-styles;
+    box-shadow: $innerShadow;
+    width: 15vw;
+    padding: 6px;
+    border-radius: 12px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-right: 12px;
+
+    &::placeholder {
+        @include applyFontStyle;
+        opacity: 1;
+    }
+
+    &:focus {
+        box-shadow: none;
+        border-color: rgba($lightShadow, 0.5);
+    }
+
+    input {
+        border: none;
+        background: var(--bg-light);
+        color: var(--font);
+
+        &:focus {
+            outline: none;
+        }
+    }
+
+    mat-icon {
+        margin-left: 4px;
+        padding-left: 12px;
+        border-left: 1px solid rgba(255, 255, 255, 0.712);
+        color: rgba(255, 255, 255, 0.712);
+    }
+}
+
+.contact-body {
+    display: flex;
+    flex-direction: column;
+    width: 65%;
+}
+
+.contact-details-box {
+    margin-left: 42px;
+    margin-top: 12px;
 }
