--- a/src/app/dialog-task-details/dialog-task-details.component.html
+++ b/src/app/dialog-task-details/dialog-task-details.component.html
@@ -1,94 +1,45 @@
-<div class="spinner-box" *ngIf="loadSpinner">
-    <mat-spinner></mat-spinner>
-</div>
-
 <div class="add-task-container">
     <button mat-icon-button class="close-btn" (click)="dialogRef.close()">
         <mat-icon>close</mat-icon>
     </button>
 
-    <div class="task-h">
-        <h1>Task Details</h1>
-        <div *ngIf="taskData.dueDate < todayDate">
-            <mat-icon>notification_important</mat-icon>
-            <span>Deadline has been exceeded!</span>
-        </div>
-    </div>
-
     <div class="task-box">
-        <div class="left-box">
-            <mat-form-field class="input-shadow input-box height-36">
-                <input matInput type="text" placeholder="Title" [(ngModel)]="taskData.title">
-            </mat-form-field>
+        <span class="category-box" [style.background-color]="getCategoryColor(taskData.category)">
+            {{ taskData.category }}
+        </span>
 
-            <mat-form-field class="input-shadow input-box">
-                <textarea class="textarea-input" matInput type="text" placeholder="Description"
-                    [(ngModel)]="taskData.description"></textarea>
-            </mat-form-field>
+        <span>
+            <h1>{{ taskData.title }}</h1>
+        </span>
 
-            <div class="input-box">
-                <select class="description-option input-shadow" [(ngModel)]="taskData.category"
-                    (change)="selectOptions()">
-                    <option [ngValue]="undefined" [disabled]="true">Choose category...</option>
-                    <option value="{{ category }}" *ngFor="let category of categoryList">{{ category }}</option>
-                </select>
-            </div>
-        </div>
+        <span class="description-box">
+            <p>{{ taskData.description }}</p>
+        </span>
 
-        <div class="right-box">
-            <mat-form-field class="input-shadow input-box height-36">
-                <mat-label for="dueDate">Due Date</mat-label>
-                <input matInput [value]="taskData.dueDate | date:'M/d/yyyy'" *ngIf="!dateChange">
-                <input [min]="minDate" matInput [matDatepicker]="picker" [(ngModel)]="taskData.dueDate"
-                    (dateChange)="dateChange = true">
-                <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-                <mat-datepicker #picker></mat-datepicker>
-            </mat-form-field>
+        <span class="date-span">
+            <p>Due date:</p>
+            <p>{{ taskData.dueDate | date: "MMM" }} {{ taskData.dueDate | date: "dd" }}, {{ taskData.dueDate | date: "yyyy" }}</p>
+            <span *ngIf="taskData.dueDate < todayDate">
+                <mat-icon>notification_important</mat-icon>
+                Deadline has been exceeded!
+            </span>
+        </span>
 
-            <div class="priotity-section">
-                <mat-form-field class="input-shadow input-box hover-prio">
-                    <mat-label>Priority</mat-label>
-                    <input [(ngModel)]="taskData.priority" matInput class="d-none">
-                    <mat-radio-group class="example-radio-group" [(ngModel)]="taskData.priority"
-                        (change)="selectOptions()">
-                        <div *ngFor="let button of priorityBtn" class="btn-shadow">
-                            <mat-radio-button class="example-radio-button" value="{{ button.name }}">
-                                {{ button.name[0].toUpperCase() }}{{ button.name.slice(1).toLowerCase() }}
-                                <mat-icon class="{{ button.name }}-btn">{{ button.icon }}</mat-icon>
-                            </mat-radio-button>
-                        </div>
-                    </mat-radio-group>
-                </mat-form-field>
-            </div>
+        <span>
+            <p>Priority:</p>
+            <p>{{ taskData.priority }}</p>
+        </span>
 
-            <div class="input-box pos-rel">
-                <input readonly *ngIf="!hideHolder" class="input-holder" matInput [(ngModel)]="contactName">
-                <select class="description-option input-shadow" [(ngModel)]="contactName"
-                    (change)="getSelectedContact()">
-                    <option [ngValue]="undefined" [disabled]="true">Assigned to...</option>
-                    <option [ngValue]="contact" *ngFor="let contact of allContacts">
-                        {{ contact.firstName }} {{ contact.lastName }}</option>
-                </select>
-            </div>
-
-            <div class="input-box">
-                <select class="description-option input-shadow" [(ngModel)]="taskData.status"
-                    (change)="selectOptions()">
-                    <option [ngValue]="undefined" [disabled]="true">Choose status...</option>
-                    <option value="{{ stat }}" *ngFor="let stat of statusList">{{ stat }}</option>
-                </select>
-            </div>
-        </div>
+        <span>
+            <p>Assigned To:</p>
+            <p [ngStyle]="{'color': taskData.bgColor}">{{ taskData.assignedTo }}</p>
+        </span>
     </div>
 
     <div class="button-box">
-        <div (click)="openDialogArchivedTask(taskData.id)" matTooltip="Delete task" matTooltipPosition="below"
+        <div (click)="openDialogEditTask(taskData.id)" matTooltip="Edit" matTooltipPosition="below"
             matTooltipClass="tooltip-blue">
-            <mat-icon>delete</mat-icon>
-        </div>
-
-        <div (click)="saveTask()" matTooltip="Save" matTooltipPosition="below" matTooltipClass="tooltip-blue">
-            <mat-icon>done</mat-icon>
+            <mat-icon>edit</mat-icon>
         </div>
     </div>
 </div>
