--- a/src/app/dialog-task-details/dialog-task-details.component.scss
+++ b/src/app/dialog-task-details/dialog-task-details.component.scss
@@ -25,12 +25,6 @@ $innerShadow: inset -4px -4px 6px -1px rgba($lightShadow, 1),
     background-color: $bgColor;
 }
 
-.add-task-container {
-    display: flex;
-    flex-direction: column;
-    position: relative;
-}
-
 .close-btn {
     position: absolute;
     right: -16px;
@@ -38,147 +32,65 @@ $innerShadow: inset -4px -4px 6px -1px rgba($lightShadow, 1),
     color: var(--header);
 }
 
-.task-h {
+.task-box {
     display: flex;
+    flex-direction: column;
+    min-width: 40vw;
+    padding-left: 18px;
 
-    h1 {
-        margin-bottom: 16px;
-        font-size: 24px;
-        border-right: none;
-        margin-top: 0;
-        margin-left: 42px;
-        color: var(--header);
-        font-weight: 600;
+    span {
+        display: flex;
+        margin-top: 6px;
+        margin-bottom: 6px;
+        color: var(--font);
+
+        p {
+            margin-bottom: 0;
+
+            &:first-child {
+                font-weight: 700;
+                margin-right: 8px;
+            }
+        }
     }
 
-    div {
+    h1 {
+        margin-top: 8px;
+        font-size: 42px;
+    }
+}
+
+.category-box {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 200px;
+    padding: 8px;
+    border-radius: 10px;
+    font-weight: 500;
+    color: white !important;
+}
+
+.description-box {
+    font-size: 24px;
+    margin-bottom: 16px !important;
+    max-width: 80%;
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+    hyphens: auto;
+}
+
+.date-span {
+    display: flex;
+    align-items: center;
+
+    span {
         color: rgb(255 0 0 / 51%);
         display: flex;
         align-items: center;
-        margin-top: -18px;
         margin-left: 18px;
     }
 }
-
-.task-box {
-    display: flex;
-    min-width: 65vw;
-}
-
-.left-box,
-.right-box {
-    display: flex;
-    flex-direction: column;
-    width: 30vw;
-    padding-left: 2vw;
-    padding-right: 2vw;
-}
-
-.left-box {
-    border-right: 1px solid rgb(0 0 0 / 14%);
-
-    mat-icon {
-        position: absolute;
-        right: 0px;
-        top: 6px;
-        // color: red;
-    }
-}
-
-.right-box {
-    ::ng-deep .mat-datepicker-toggle {
-        button {
-            height: 42px !important;
-            width: 30px !important;
-            font-size: 24px !important;
-            position: absolute;
-            top: -34px;
-            right: 0px;
-        }
-    }
-}
-
-.priotity-section {
-    display: flex;
-    flex-direction: column;
-
-    // mat-label {
-    //     color: var(--header);
-    // }
-
-    ::ng-deep .mat-radio-group {
-        display: flex;
-        justify-content: space-evenly;
-        // margin-top: 24px;
-    }
-
-    ::ng-deep .mat-radio-button {
-        display: flex;
-        justify-content: center;
-
-        span {
-            display: flex;
-            align-items: center;
-            color: rgb(0 0 0 / 61%);
-        }
-    }
-
-    ::ng-deep .mat-radio-button.mat-accent.mat-radio-checked .mat-radio-outer-circle {
-        border-color: var(--header);
-    }
-
-    ::ng-deep .mat-radio-button.mat-accent .mat-radio-inner-circle,
-    .mat-radio-button.mat-accent .mat-radio-ripple .mat-ripple-element:not(.mat-radio-persistent-ripple),
-    .mat-radio-button.mat-accent.mat-radio-checked .mat-radio-persistent-ripple,
-    .mat-radio-button.mat-accent:active .mat-radio-persistent-ripple {
-        background-color: var(--header);
-    }
-
-    ::ng-deep .mat-form-field-appearance-legacy .mat-form-field-underline {
-        background-color: unset !important;
-    }
-}
-
-.urgent-btn {
-    color: #FF3D00;
-}
-
-.medium-btn {
-    color: #FFA800;
-}
-
-.low-btn {
-    color: #7AE229;
-}
-
-::ng-deep .mat-focused .mat-form-field-label {
-    // color: var(--header) !important;
-    color: var(--header) !important;
-}
-
-::ng-deep .mat-form-field-underline {
-    // background-color: var(--header) !important;
-    background-color: $bgColor !important;
-}
-
-::ng-deep .mat-form-field-ripple {
-    // background-color: var(--header) !important;
-    background-color: $bgColor !important;
-}
-
-::ng-deep .mat-form-field-appearance-fill .mat-form-field-infix {
-    display: flex !important;
-}
-
-::ng-deep .mat-form-field-appearance-outline .mat-form-field-outline-thick {
-    color: var(--header) !important;
-}
-
-// .mat-form-field-flex {
-//     box-shadow: inset -4px -4px 6px -1px rgba(#FFFFFF, 1),
-//     inset 2px 2px 8px -1px rgba(#484f60, 0.5);
-//     border-radius: 10px;
-// }
 
 .button-box {
     display: flex;
@@ -245,120 +157,4 @@ $innerShadow: inset -4px -4px 6px -1px rgba($lightShadow, 1),
         box-shadow: none;
         border-color: white;
     }
-}
-
-.input-shadow {
-    @extend %shared-styles;
-    box-shadow: $innerShadow;
-    width: 28vw;
-    padding: 10px;
-    border-radius: 12px;
-
-    &:focus {
-        box-shadow: none;
-        border-color: rgba(var(--header), 0.5);
-    }
-
-    &::placeholder {
-        @include applyFontStyle;
-        opacity: 1;
-    }
-
-    mat-hint {
-        font-size: 10px !important;
-    }
-
-    .mat-form-field-appearance-legacy .mat-form-field-wrapper {
-        height: 36px;
-        padding-bottom: 0;
-        display: flex;
-        align-items: center;
-    }
-}
-
-.hover-prio {
-    &:hover {
-        box-shadow: $innerShadow;
-        border: 2px solid $bgColor;
-    }
-}
-
-.height-36 {
-    height: 36px !important;
-}
-
-.textarea-input {
-    height: 115px !important;
-    width: 28vw;
-}
-
-.input-box {
-    margin: 8px;
-
-    textarea {
-        resize: none !important;
-    }
-}
-
-.description-option {
-    width: 30vw;
-    height: 60px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0 15px;
-    transition: all 300ms;
-}
-
-.btn-shadow {
-    @extend %shared-styles;
-    box-shadow: $dropShadow;
-    cursor: pointer;
-    padding: 6px;
-    border-radius: 14px;
-
-    &:active {
-        box-shadow: $innerShadow;
-        border-color: rgba($lightShadow, 0);
-    }
-
-    &:hover {
-        border: 1px solid white;
-    }
-}
-
-.input-holder {
-    @include applyFontStyle;
-    position: absolute;
-    z-index: 1;
-    top: 22px;
-    left: 20px;
-    width: 40%;
-    outline: none;
-    cursor: context-menu;
-
-    &:hover {
-        .btn-shadow {
-            &:hover {
-                border: 1px solid white;
-            }
-        }
-    }
-}
-
-.spinner-box {
-    position: absolute;
-    top: 0;
-    z-index: 2;
-    width: 100vw;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: #ffffffb5;
-    left: 0;
-}
-
-.mat-progress-spinner circle, .mat-spinner circle {
-    stroke: var(--header);
 }
