--- a/src/app/dialog-task-details/dialog-task-details.component.html
+++ b/src/app/dialog-task-details/dialog-task-details.component.html
@@ -1,4 +1,4 @@
-<div class="add-task-container">
+<div class="details-task-container">
     <button mat-icon-button class="close-btn" (click)="dialogRef.close()">
         <mat-icon>close</mat-icon>
     </button>
