--- a/src/app/dialog-edit-task/dialog-edit-task.component.html
+++ b/src/app/dialog-edit-task/dialog-edit-task.component.html
@@ -2,7 +2,7 @@
     <mat-spinner></mat-spinner>
 </div>
 
-<div class="add-task-container">
+<div class="edit-task-container">
     <button mat-icon-button class="close-btn" (click)="dialogRef.close()">
         <mat-icon>close</mat-icon>
     </button>
