update task details

--- a/src/app/board/board.component.html
+++ b/src/app/board/board.component.html
@@ -35,7 +35,7 @@
                             <mat-icon matTooltip="History" matTooltipPosition="above"
                             matTooltipClass="tooltip-blue">history</mat-icon>
 
-                            <mat-icon matTooltip="Delete task" matTooltipPosition="above"
+                            <mat-icon matTooltip="Archived task" matTooltipPosition="above"
                                 matTooltipClass="tooltip-blue" (click)="openDialogArchivedTask(task.id)">delete</mat-icon>
                         </div>
 
@@ -88,7 +88,7 @@
                             <mat-icon matTooltip="History" matTooltipPosition="above"
                             matTooltipClass="tooltip-blue">history</mat-icon>
 
-                            <mat-icon matTooltip="Delete task" matTooltipPosition="above"
+                            <mat-icon matTooltip="Archived task" matTooltipPosition="above"
                                 matTooltipClass="tooltip-blue" (click)="openDialogArchivedTask(task.id)">delete</mat-icon>
                         </div>
                         
@@ -141,7 +141,7 @@
                             <mat-icon matTooltip="History" matTooltipPosition="above"
                             matTooltipClass="tooltip-blue">history</mat-icon>
 
-                            <mat-icon matTooltip="Delete task" matTooltipPosition="above"
+                            <mat-icon matTooltip="Archived task" matTooltipPosition="above"
                                 matTooltipClass="tooltip-blue" (click)="openDialogArchivedTask(task.id)">delete</mat-icon>
                         </div>
                         
@@ -194,7 +194,7 @@
                             <mat-icon matTooltip="History" matTooltipPosition="above"
                             matTooltipClass="tooltip-blue">history</mat-icon>
 
-                            <mat-icon matTooltip="Delete task" matTooltipPosition="above"
+                            <mat-icon matTooltip="Archived task" matTooltipPosition="above"
                                 matTooltipClass="tooltip-blue" (click)="openDialogArchivedTask(task.id)">delete</mat-icon>
                         </div>
                         
