--- a/src/app/dialog-task-details/dialog-task-details.component.html
+++ b/src/app/dialog-task-details/dialog-task-details.component.html
@@ -27,7 +27,12 @@
 
         <span>
             <p>Priority:</p>
-            <p>{{ taskData.priority }}</p>
+            <p class="capitalize">{{ taskData.priority }}</p>
+        </span>
+
+        <span>
+            <p>Status:</p>
+            <p>{{ taskData.status }}</p>
         </span>
 
         <span>
