--- a/src/app/board/board.component.scss
+++ b/src/app/board/board.component.scss
@@ -63,7 +63,7 @@ $innerShadow: inset -4px -4px 6px -1px rgba($lightShadow, 1),
         justify-content: center;
         align-items: center;
         box-shadow: inset 2px 2px 0px var(--bg-light),
-            inset -1px -1px 11px #ffffff;
+            inset -1px -1px 11px #ffffff !important;
 
         &:hover {
             transform: scale3d(1.1, 1.1, 1.1);
