--- a/src/app/dialog-edit-task/dialog-edit-task.component.html
+++ b/src/app/dialog-edit-task/dialog-edit-task.component.html
@@ -8,7 +8,7 @@
     </button>
 
     <div class="task-h">
-        <h1>Task Details</h1>
+        <h1>Edit Task</h1>
         <div *ngIf="taskData.dueDate < todayDate">
             <mat-icon>notification_important</mat-icon>
             <span>Deadline has been exceeded!</span>
@@ -82,7 +82,7 @@
     </div>
 
     <div class="button-box">
-        <div (click)="openDialogArchivedTask(taskData.id)" matTooltip="Delete task" matTooltipPosition="below"
+        <div (click)="openDialogArchivedTask(taskData.id)" matTooltip="Archived task" matTooltipPosition="below"
             matTooltipClass="tooltip-blue">
             <mat-icon>delete</mat-icon>
         </div>
