--- a/src/app/dialog-add-task/dialog-add-task.component.scss
+++ b/src/app/dialog-add-task/dialog-add-task.component.scss
@@ -310,12 +310,32 @@ $innerShadow: inset -4px -4px 6px -1px rgba($lightShadow, 1),
             border: 1px solid white;
         }
     }
+
+    .input-holder {
+        @include applyFontStyle;
+        position: absolute;
+        z-index: 1;
+        top: 22px;
+        left: 20px;
+        width: 40%;
+        outline: none;
+        background-color: #EBECF0;
+        cursor: context-menu;
+    
+        &:hover {
+            .btn-shadow {
+                &:hover {
+                    border: 1px solid white;
+                }
+            }
+        }
+    }
 }
 
 .spinner-box {
     position: absolute;
     top: 0;
-    z-index: 1;
+    z-index: 2;
     width: 100vw;
     height: 100vh;
     display: flex;
