--- a/src/app/dialog-edit-task/dialog-edit-task.component.scss
+++ b/src/app/dialog-edit-task/dialog-edit-task.component.scss
@@ -318,6 +318,7 @@ $innerShadow: inset -4px -4px 6px -1px rgba($lightShadow, 1),
         width: 40%;
         outline: none;
         cursor: context-menu;
+        background-color: #EBECF0;
     
         &:hover {
             .btn-shadow {
